# perm-agent

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: FUNDING.yml
src/perm_agent/: __init__.py  api.py  comm_tools.py  communication.py  events.py  exceptions.py  factory.py  guardrails.py  observability.py  registry.py  retry.py  structured.py
src/perm_agent/handlers/: __init__.py  agent_loop.py  async_agent_loop.py  async_handoff.py  async_llm.py  async_tool.py  handoff.py  llm.py  streaming.py  tool.py
tests/: conftest.py
tests/e2e/: test_communication_e2e.py  test_gemini_flows.py
tests/integration/: test_communication_pipeline.py  test_full_workflows.py  test_jperm_advanced.py  test_workflows.py
tests/unit/: test_agent_loop.py  test_api.py  test_async_handlers.py  test_comm_tools.py  test_communication.py  test_error_handling.py  test_factory_communication.py  test_handoff.py  test_llm.py  test_observability.py  test_registry.py  test_streaming.py  test_structured.py  test_tool.py
