[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perm-agent"
version = "0.1.0"
description = "Declarative JSON-native AI agent framework built on j-perm"
requires-python = ">=3.10"
dependencies = ["j-perm>=1.2.0", "litellm>=1.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
